# vita-toolchain

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  build.sh  configure  configure.ac  deps.sh  elf-defs.c  elf-defs.h  elf-utils.c  elf-utils.h  endian-utils.h  fail-utils.h  sample-db.json  sce-elf-defs.h  sce-elf.c  sce-elf.h  varray.c  varray.h  vita-elf-create.c  vita-elf.c  vita-elf.h  vita-import-parse.c  vita-import.c  vita-import.h  vita-libs-gen.c
.github/workflows/: compilation.yml
azure-devops/: azure-pipeline.yml
cmake/Modules/: FindJansson.cmake  Findlibelf.cmake  Findlibyaml.cmake  Findlibz.cmake  Findlibzip.cmake  Findzlib.cmake
cmake_toolchain/: CMakeLists.txt  vita.cmake  vita.toolchain.cmake
contrib/usr/share/: vita.cmake  vita.toolchain.cmake
doc/: specifications.md
pkgconfig/: CMakeLists.txt  arm-vita-eabi-pkg-config
psp2rela/: CMakeLists.txt  LICENSE  README.md
psp2rela/normal/: CMakeLists.txt
psp2rela/src/: debug.c  debug.h  main.c  module_load_types.h  module_loader.c  module_loader.h  module_relocation.c  module_relocation.h  modulemgr_internal.h  rela_config.h
psp2rela/src/psp2/: self.h  types.h
psp2rela/src/rela/: convert.c  convert.h  core.c  core.h  data_register.c  data_register.h  module_relocation_types.h  register.c  register.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  dupstring.c  dupstring.h  elf-create-argp.c  elf-create-argp.h  elf-defs.c  elf-defs.h  elf-utils.c  elf-utils.h  export-parse.c  export.h  fail-utils.h  fs_list.c  fs_list.h  getopt.h  getopt_long.c  import-parse.c  import.c  sce-elf-defs.h  sce-elf.c  sce-elf.h  self.h  sha256.c  sha256.h  strndup.c  types.h  varray.h  velf.c  velf.h  vita-elf-create.c  vita-elf-export.c  vita-elf.c  vita-elf.h  vita-export-parse.c  vita-export.h  vita-import-parse.c  vita-import.c  vita-import.h  (+22 more)
src/utils/: endian-utils.h  fs_list.c  sha256.c  sha256.h  strndup.h  yamltreeutil.c
src/vita-elf-create/: elf-create-argp.c  elf-create-argp.h  elf-defs.h  elf-utils.c  sce-elf.c  sce-elf.h  vita-elf-create.c  vita-elf.c  vita-elf.h
src/vita-elf-export/: vita-elf-export.c
src/vita-libs-gen/: vita-libs-gen.c
src/vita-libs-gen-2/: defs.h  vita-libs-gen-2.cpp  vita-nid-db-yml.c  vita-nid-db.c  vita-nid-db.h
src/vita-make-fself/: vita-make-fself.c
src/vita-mksfoex/: getopt.h  getopt_long.c  vita-mksfoex.c
src/vita-nid-check/: vita-nid-bypass.c  vita-nid-bypass.h  vita-nid-check.c
src/vita-pack-vpk/: vita-pack-vpk.c
test/: .gitignore  Makefile
test/libs/: .gitignore
tests/: Makefile.am  Makefile.in  test.c
tests/libs/: Makefile  SceLibGcc.S  SceLibKernel.S
yml_template/: module_config.yml  nid_db_classic.yml
